# advent-of-code

2022/day1/: Cargo.toml
2022/day1/src/: main.rs
2022/day10/: Cargo.toml
2022/day10/src/: crt.rs  interpreter.rs  lib.rs  main.rs  parser.rs
2022/day11/: Cargo.toml
2022/day11/src/: lib.rs  main.rs  monkey.rs  parser.rs
2022/day12/: Cargo.toml
2022/day12/src/: grid.rs  main.rs
2022/day13/src/: main.rs
2022/day14/: Cargo.toml
2022/day14/src/: cave.rs  lib.rs  main.rs  parser.rs
2022/day15/: Cargo.toml
2022/day15/src/: lib.rs  main.rs  sensors.rs
2022/day15/src/grid/: grid.rs  mod.rs  sparse_grid.rs
2022/day17/: Cargo.toml
2022/day17/src/: lib.rs  main.rs  rock.rs
2022/day17/src/grid/: grid.rs  mod.rs  sparse_grid.rs  util.rs
2022/day2/: Cargo.toml
2022/day2/src/: main.rs
2022/day3/: Cargo.toml
2022/day3/src/: items.rs
2022/day4/: Cargo.toml
2022/day4/src/: parse.rs  range.rs
2022/day5/: Cargo.toml
2022/day5/src/: instructions.rs  lib.rs  stacks.rs
2022/day6/: Cargo.toml
2022/day7/: Cargo.toml
2022/day7/src/: filetree.rs  lib.rs  parser.rs
2022/day8/: Cargo.toml
2022/day8/src/: grid.rs  main.rs
2022/day9/: Cargo.toml
2022/day9-flamey/: Cargo.toml
2022/day9-flamey/src/: main.rs
2022/day9/src/: lib.rs  main.rs  moves.rs  rope.rs
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml  pyproject.toml
2023/day02/day02/: inputs.py  main.py
2023/day02/src/: lib.rs
2023/day03/: Cargo.toml
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: Cargo.toml
2023/day05/src/: lib.rs  main.rs
2023/day06/src/: main.rs
2023/day07/src/: main.rs
2023/day08/: Cargo.toml
2023/day08/src/: main.rs
2023/day09/: Cargo.toml
2023/day09/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: main.rs
2023/day13/: Cargo.toml
2023/day13/src/: main.rs  test.txt
2023/day14/: Cargo.toml  test.py
2023/day14/src/: main.rs
2023/day15/src/: main.rs
2023/day16/: Cargo.toml
2023/day16/src/: lib.rs  main.rs  maze_walker.rs
2023/day17/: Cargo.toml
2023/day17/src/: main.rs  test2.txt
2023/day19/: Cargo.toml
2023/day19/src/: main.rs
2023/day22/: Cargo.toml
2023/day22/src/: main.rs
2024/day01/src/: main.rs
2024/day02/src/: main.rs
2024/day03/: Cargo.toml
2024/day03/src/: input.txt  main.rs
2024/day04/: Cargo.toml
2024/day04/src/: main.rs
2024/day05/: Cargo.toml
2024/day05/src/: main.rs
2024/day06/: Cargo.toml
2024/day06/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day3/src/: items.rs
util/: Cargo.toml
util/src/: grid.rs
