[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
nom = "7.1.1"
tokio = { version = "1.23.0", features = ["full"] }
