[package]
name = "day3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
rayon = "1.6.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
tokio = { version = "1.22.0", features = ["full"] }
