[package]
name = "day02_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day02_parser"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"
pyo3 = "0.19.0"
