[tool.autopep8]
max_line_length = 120

# Pylint settings
[tool.pylint.'NESSAGES CONTROL']
disable = [
    "logging-fstring-interpolation", # See https://github.com/PyCQA/pylint/issues/2354
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",    # also triggers on abstract functions
    "consider-using-enumerate",      # not for simple loops
    "consider-using-dict-items",
    "no-else-return",
    "invalid-name",
    "too-many-boolean-expressions",
    "too-few-public-methods",
    "I",
]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry]
name = "day02"
version = "0.1.0"
description = ""
authors = ["Max Hösel <git@maxhoesel.de>"]
readme = "README.md"

[tool.poetry.scripts]
day02 = "day02.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.3.2"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.3,<1.4"]
build-backend = "maturin"
