[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
tokio = { version = "1.34.0", features = ["full"] }

[profile.release]
debug = true
