[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
