[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indicatif = "0.17.7"
itertools = "0.12.0"
petgraph = "0.6.4"
ringbuffer = "0.15.0"
strum = { version = "0.25.0", features = ["derive"] }
util = { path = "../../util" }

[profile.release]
debug = true
